// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Flex props 1`] = `
Object {
  "colorMode": "default",
  "elementRef": [Function],
  "ref": [Function],
  "style": Array [
    Object {
      "display": "flex",
      "flexDirection": "row",
    },
    Object {},
  ],
}
`;

exports[`composition render props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="display: flex; flex-direction: row;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  class="css-view-1dbjc4n"
  style="color: rgb(87, 79, 235); display: flex; flex-direction: row;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="display: flex; flex-direction: row;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-view-1dbjc4n"
  style="color: rgb(87, 79, 235); display: flex; flex-direction: row;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Flex.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); display: flex; flex-direction: row;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;
